feat(ticket-rest): add create ticket endpoint
